<resources>
    <string name="app_name">Headphone DND Toggle</string>
    <string name="main_switch_text">Service Enabled</string>
    <string name="reenable_switch_text">Re-enable DND on unplug as scheduled</string>
    <string name="day_button_text">Days</string>
    <string name="start_time_button_text">Start time</string>
    <string name="end_time_button_text">End time</string>
    <string name="current_app_state_filename">state</string>
    <string name="checked">1</string>
    <string name="not_checked">0</string>
    <string name="reenable_dnd_filename">reenable</string>
    <string name="renable">1</string>
    <string name="dont_renable">0</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="extra_selected_buttons_array_id">2</string>
    <string name="selected_buttons_return_id">3</string>
</resources>
